[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/DODGE.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Particle.png" type="Texture" id=3]
[ext_resource path="res://Assets/tiny_guns/jb007.png" type="Texture" id=4]
[ext_resource path="res://Assets/smoke_particle.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]

size = 14
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="StyleBoxFlat" id=8]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.53349, 0.859375, 0.476685, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0.553941, 0.839844, 0.521622, 0.6 )
shadow_size = 5
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Corner Radius", "Shadow" ]

[sub_resource type="StyleBoxEmpty" id=9]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 20.0

[sub_resource type="Gradient" id=3]

offsets = PoolRealArray( 0, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.339844, 0.339844, 0.339844, 1 )

[sub_resource type="GradientTexture" id=4]

flags = 4
gradient = SubResource( 3 )
width = 2048

[sub_resource type="Curve" id=5]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 0.411929 ), 0.0, 0.0, 0, 0, Vector2( 0.697717, 0.707715 ), -0.511653, -0.511653, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]

flags = 4
width = 2048
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, -20, 0 )
initial_velocity = 0.0
initial_velocity_random = 0.0
angular_velocity = 100.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 5.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 0.1
scale_random = 0.0
scale_curve = SubResource( 6 )
color_ramp = SubResource( 4 )
hue_variation = 1.49012e-008
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Gravity" ]

[node name="Player" type="KinematicBody2D" index="0" groups=[
"EnemyCollider",
]]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="PlayerName" type="Label" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -80.0
margin_top = -70.0
margin_right = 74.0
margin_bottom = -28.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.613281, 0, 0, 1 )
text = "Player"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="HealthBar" type="ProgressBar" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -30.0
margin_top = -38.0
margin_right = 23.0
margin_bottom = -36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
min_value = 0.0
max_value = 3.0
step = 1.0
page = 0.0
value = 3.0
exp_edit = false
rounded = true
percent_visible = false

[node name="Collision" type="CollisionShape2D" parent="." index="2" groups=[
"EnemyCollider",
]]

shape = SubResource( 2 )

[node name="PlayerSprite" type="Sprite" parent="." index="3"]

modulate = Color( 0.286224, 0.421389, 0.882813, 1 )
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Weapon" type="Sprite" parent="." index="4"]

scale = Vector2( 4, 4 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Material", "Transform" ]

[node name="GunShot" type="RayCast2D" parent="Weapon" index="0"]

position = Vector2( 2.5, 0 )
scale = Vector2( 0.25, 0.25 )
enabled = false
exclude_parent = true
cast_to = Vector2( 5000, 0 )
collision_mask = 1

[node name="WeaponSmoke" type="Particles2D" parent="Weapon" index="1"]

position = Vector2( 5.83655, -2.82196 )
emitting = false
amount = 200
lifetime = 2.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 1
process_material = SubResource( 7 )
texture = ExtResource( 5 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Time", "Transform" ]

[node name="SmokeTimer" type="Timer" parent="Weapon" index="2"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="timeout" from="Weapon/SmokeTimer" to="." method="_on_SmokeTimer_timeout"]


